Ajout du TP timeline

--- a/boucle.html
+++ b/boucle.html
@@ -31,7 +31,7 @@
             suscipit, molestiae dolor, nihil asperiores corrupti, quisquam ducimus! Sint, ipsa. Voluptates adipisci
             facilis veniam impedit?</p>
     </div>
-
+<script type="module" src="./src/error.js"></script>
 </body>
 
 </html>
