Ajout de l'exo Api ChuckNorris

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="hero min-h-[60vh] sm:min-h-[70vh] lg:min-h-96 bg-gradient-to-br from-base-200 to-base-300 rounded-lg">
             <div class="hero-content text-center">
               <div class="max-w-xs sm:max-w-md lg:max-w-lg">
-                <h1 class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-4">Bienvenue!</h1>
+                <h1 id="title-main" class="text-3xl sm:text-4xl lg:text-5xl font-bold mb-4">Bienvenue!</h1>
                 <h2 id="title-clic">Clique ici 😉</h2>
                 <span id="counter">Compteur : 0</span>
                 <h2>On teste d'espionner le clavier</h2>
